--- a/src/components/UI/ProjectCard.module.css
+++ b/src/components/UI/ProjectCard.module.css
@@ -2,7 +2,7 @@
   border: 1px dashed;
   border-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
-  width: 100%;
+  width: 80%;
   min-width: 0;
   padding-top: 20px;
   padding-left: 15px;
