--- a/src/components/UI/SkillCard.module.css
+++ b/src/components/UI/SkillCard.module.css
@@ -2,11 +2,11 @@ h3 {
   font-size: 15px;
 }
 
+
 .card {
   width: 100%;
   min-width: 0;
   padding-top: 20px;
-  padding-left: 15px;
   padding-right: 15px;
   display: flex;
   flex-direction: column;
@@ -18,6 +18,7 @@ h3 {
   animation-timeline: view();
   animation-range: entry 20% cover 40%;
 }
+
 
 @keyframes fadeUp {
    from {
